adding new header

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@ layout: default
       </li>
     {% endfor %}
   </ul>
+  
+  <h2>New Header for GIT Testing</h2>
 
   <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>
 
